# wamiri-assessment

./: .gitignore  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/configs/: dashboard_spec.yaml  extraction_module_schema.yaml  sla_definitions.yaml
backend/src/: config.py
backend/src/api/: main.py  routes.py
backend/src/models/: schemas.py
backend/src/services/: circuit_breaker.py  database.py  extraction_service.py  monitoring_service.py  review_queue_service.py  storage_service.py  workflow_executor.py
backend/src/tasks/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/performance/: test_performance.py
backend/tests/quality/: test_data_quality.py
backend/tests/unit/: test_extraction.py  test_monitoring.py  test_workflow.py
docs/: module_architecture.md  monitoring_runbook.md  review_queue_design.md  workflow_engine_design.md
monitoring/grafana/dashboards/: wamiri-invoices.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ErrorBoundary.tsx  PdfViewer.tsx
ui/src/components/layout/: AppLayout.tsx
ui/src/lib/: api.ts  store.ts  types.ts  upload-tracking.ts
ui/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  QueuePage.tsx  ReviewPage.tsx  UploadPage.tsx
ui/src/tests/: Dashboard.test.tsx  setup.ts
